--- a/app/src/main/res/layout/fragment_auth_wizard_02a_searching.xml
+++ b/app/src/main/res/layout/fragment_auth_wizard_02a_searching.xml
@@ -2,8 +2,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 		style="@style/WizardPageContainer">
 
-	<TextView style="@style/WizardPageTitle" android:text="@string/accountwizard_step2a_title"
-			android:id="@+id/title"/>
+	<com.devspark.robototextview.widget.RobotoTextView
+			android:id="@+id/title"
+			style="@style/WizardPageTitle"
+			android:text="@string/accountwizard_step2a_title"/>
 
 	<ProgressBar
 			android:id="@+id/spinner"
