--- a/app/src/main/res/layout/navdrawer_item_expandable.xml
+++ b/app/src/main/res/layout/navdrawer_item_expandable.xml
@@ -19,7 +19,7 @@
 			android:layout_marginLeft="12dp"
 			tools:ignore="SpUsage" />
 
-	<TextView
+	<com.devspark.robototextview.widget.RobotoTextView
 			style="@style/NavigationDrawer.text"
 			android:id="@+id/label"
 			android:layout_width="wrap_content"
