--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -47,14 +47,14 @@
 	</style>
 
 	<style name="Header">
-		<item name="android:fontFamily" tools:ignore="NewApi">sans-serif-light</item>
+		<item name="typeface">roboto_light</item>
 	</style>
 	<style name="Header.h1">
 		<item name="android:layout_marginTop">10dp</item>
 		<item name="android:layout_marginLeft">15dp</item>
 		<item name="android:layout_alignParentTop">true</item>
-		<item name="android:textStyle">italic</item>
 		<item name="android:textSize">22sp</item>
+		<item name="typeface">roboto_light_italic</item>
 	</style>
 	<style name="Header.h2">
 		<item name="android:layout_marginTop">-4dp</item>
